Added a new certificate

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</div>
 				<div class="col-lg-6">
 					<!-- EDIT: about -->
-					<p>I am a highly adaptable, exuberant, flexible and experienced individual with good time management skills. I am skilled in dealing with problems in a resourceful manner. I am a fine communicator with proven inter personal skills and used to working in a team whilst also being capable of using own initiative. I am always enthusiastic to learn and undertake new challenges.</p>
+					<p>I am a highly adaptable, exuberant and experienced individual with good time management skills. I am skilled in dealing with problems in a resourceful manner. I am a fine communicator with proven inter personal skills and used to working in a team whilst also being capable of using own initiative. I am always enthusiastic to learn and undertake new challenges.</p>
 				</div>
 				<div class="col-lg-3">
 					<!-- EDIT: download link -->
@@ -355,6 +355,16 @@
 				</div>
 				<div class="col-lg-3">
 					<p><a href="https://www.hackerrank.com/certificates/c82ed4e1db6e" target="_blank"><strong>View</strong></a></p>
+				</div>
+
+				<!-- EDIT: CERTIFICATIONS line 6-->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p><t>Excel Crash Course - Spreadsheet Formulas for Finance</t><br/>
+						Corporate Finance Institute<br/>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><a href="https://s3.amazonaws.com/cfi-marketplace/dashboard/cpe-credits-certificates/cfb5f29aeb37581280335af5926e6cb9/cpe-certificate.pdf" target="_blank"><strong>View</strong></a></p>
 				</div>
 		
 		</div><!--/.row -->
