--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><a href="https://s3.amazonaws.com/cfi-marketplace/dashboard/cpe-credits-certificates/cfb5f29aeb37581280335af5926e6cb9/cpe-certificate.pdf" target="_blank"><strong>View</strong></a></p>
+					<p><a href="https://credentials.corporatefinanceinstitute.com/44a2dcf1-b8fd-40c2-9fd5-08f8d33df122" target="_blank"><strong>View</strong></a></p>
 				</div>
 		
 		</div><!--/.row -->
