--- a/index.html
+++ b/index.html
@@ -176,15 +176,27 @@
 
 				<!-- EDIT: activities line 1-->
 				<div class="col-lg-6">
-					<p><t>Member of Sahridhaya</t><br/>
-						A Non-Profit Organization<br/>
+					<p><t>Delegate</t><br/>
+						HPAIR'21<br/>
+					</p>
+					<p><more>HPAIR is an internationally recognized student organization at Harvard College, offering a forum of exchange to facilitate discussion of the most important economic, political, and social issues relevant to the Asia-Pacific region.</more></p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>15/01/2021 - 18/01/2021</sm></p>
+				</div>
+
+				<!-- EDIT: activities line 2-->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p class="tight"><t>Member of Sahridhaya</t><br/>
+						A Non-Profit Organization
 					</p>
 				</div>
 				<div class="col-lg-3">
 					<p><sm>2018 - Present</sm></p>
 				</div>
+				
 	
-				<!-- EDIT: activities line 2-->
+				<!-- EDIT: activities line 3-->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p class="tight"><t>Sponsorship Head</t><br/>
 						Cult A Way
@@ -194,6 +206,8 @@
 				<div class="col-lg-3">
 					<p><sm>2019</sm></p>
 				</div>
+
+				<!-- EDIT: activities line 4-->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p class="tight"><t>NSS Volunteer</t><br/>
 						Sree Chitra Thirunal College of Engineering
@@ -366,6 +380,16 @@
 				<div class="col-lg-3">
 					<p><a href="https://credentials.corporatefinanceinstitute.com/44a2dcf1-b8fd-40c2-9fd5-08f8d33df122" target="_blank"><strong>View</strong></a></p>
 				</div>
+
+				<!-- EDIT: CERTIFICATIONS line 7-->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p><t>Certificate of Recognition</t><br/>
+						Harvard Project for Asian and International Relations (HPAIR)<br/>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><a href="https://drive.google.com/file/d/1p5ubB-jLCxAdihReoHN32BE-Y1mvI_so/view" target="_blank"><strong>View</strong></a></p>
+				</div>
 		
 		</div><!--/.row -->
 		<br>
@@ -394,7 +418,7 @@
 					</p>
 					<!-- EDIT: phone number -->
 					<p><t>Phone</t><br/>
-						<a href="tel:919048459285" class="tel">(91) 9048459285</a> <br/>
+						<a href="tel:919048459285" class="tel">(+91) 9048459285</a> <br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
