Updated index.html and Resume.pdf
Updated Work experience and education fields

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</div>
 				<div class="col-lg-6">
 					<!-- EDIT: about -->
-					<p>I am a highly adaptable, exuberant and experienced individual with good time management skills. I am skilled in dealing with problems in a resourceful manner. I am a fine communicator with proven inter personal skills and used to working in a team whilst also being capable of using own initiative. I am always enthusiastic to learn and undertake new challenges.</p>
+					<p>I am a highly adaptable, exuberant and experienced individual with good time management skills. I am skilled in dealing with problems in a resourceful manner. I am a fine communicator with proven interpersonal skills and used to working in a team whilst also being capable of taking own initiative. I am always enthusiastic to learn and undertake new challenges.</p>
 				</div>
 				<div class="col-lg-3">
 					<!-- EDIT: download link -->
@@ -80,6 +80,21 @@
 				</div>
 				<!-- EDIT: education line 1 -->
 				<div class="col-lg-6">
+					<p><t>Master of Science</t>
+						<br/>Business Analytics
+						<br/>
+						University of Exeter
+						<br/><i>Exeter, Devon, United Kingdom</i>
+						
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>09/2021- Present</sm><br/>
+					</p>
+				</div>
+				</div>
+				<!-- EDIT: education line 2 -->
+				<div class="col-lg-6">
 					<p><t>Bachelor of Technology</t>
 						<br/>Electronics and Communication
 						<br/>
@@ -94,7 +109,7 @@
 					</p>
 				</div>
 	
-				<!-- EDIT: education line 2 -->
+				<!-- EDIT: education line 3 -->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Higher Secondary Education</t><br/>
 						 Arya Central School, CBSE
@@ -106,6 +121,7 @@
 						<sm>Percentage: 92%</sm>
 					</p>
 				</div>
+				<!-- EDIT: education line 4 -->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Senior Secondary Education</t><br/>
 						 Arya Central School, CBSE
@@ -144,7 +160,7 @@
 					</ul></more></p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>JUNE 2019 - Present <br />
+					<p><sm>JUNE 2019 - JUNE 2021 <br />
 					Trivandrum, Kerala, India</sm></p>
 				</div>
 				
@@ -412,13 +428,14 @@
 					</p>
 					<!-- EDIT: address -->
 					<p><t>Address</t><br/>
-						Ambalamukku <br/>
-						Trivandrum, Kerala <br/>
-						India<br/>
+						Lafrowda Block R <br/>
+						St German's Road <br/>
+						Exeter, Devon <br/>
+						United Kingdom<br/>
 					</p>
 					<!-- EDIT: phone number -->
 					<p><t>Phone</t><br/>
-						<a href="tel:919048459285" class="tel">(+91) 9048459285</a> <br/>
+						<a href="tel:+447767986553" class="tel">(+44) 7767986553</a> <br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
