--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				</div>
 				</div>
 				<!-- EDIT: education line 2 -->
-				<div class="col-lg-6">
+				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Bachelor of Technology</t>
 						<br/>Electronics and Communication
 						<br/>
