--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<div class="col-lg-12">
 					<img src="Photo.jpg" alt="Passport size photo"  class="responsive">
 					<h1>Abhirami S A</h1>
-					<h3>Software Engineer | <a href="mailto:abhiramisa97@gmail.com" target="_blank">abhiramisa97@gmail.com</a></h3>
+					<h3>Analyst | Software Engineer | <a href="mailto:abhiramisa97@gmail.com" target="_blank">abhiramisa97@gmail.com</a></h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -89,7 +89,7 @@
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>09/2021- Present</sm><br/>
+					<p><sm>09/2021- 09/2022</sm><br/>
 					</p>
 				</div>
 				<!-- EDIT: education line 2 -->
@@ -207,7 +207,7 @@
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>2018 - Present</sm></p>
+					<p><sm>2018 - 2021</sm></p>
 				</div>
 				
 	
@@ -427,9 +427,9 @@
 					</p>
 					<!-- EDIT: address -->
 					<p><t>Address</t><br/>
-						Lafrowda Block R <br/>
-						St German's Road <br/>
-						Exeter, Devon <br/>
+						---------------- <br/>
+						---------------- <br/>
+						London <br/>
 						United Kingdom<br/>
 					</p>
 					<!-- EDIT: phone number -->
